--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   firebase_core: ^2.15.0
   flutter:
     sdk: flutter
+  flutter_tts: ^3.7.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_lints: ^2.0.0
