--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_tts: ^3.7.0
+  google_fonts: ^5.1.0
   provider: ^6.0.5
 
 dev_dependencies:
